sql/item_windowfunc.h
@@ -771,6 +771,7 @@ public:
 
   void split_sum_func(THD *thd, Ref_ptr_array ref_pointer_array,
                               List<Item> &fields, uint flags);
+
   void fix_length_and_dec()
   {
     decimals = window_func()->decimals;
